Prepare for first draft submission

--- a/latex/ch0.tex
+++ b/latex/ch0.tex
@@ -5,9 +5,9 @@
 \begin{abstract}
 \phantomsection
 \addcontentsline{toc}{section}{\abstractname}
-I would like to thank my supervisor, Professor Ichiro Fijunaga, for providing guidance throughout my master's degree and thesis. His rigor and attention to detail have made me a better researcher. I would like to thank my labmates who helped me work through many difficult parts; N{\'e}stor N{\'a}poles L{\'o}pez (who created Figure \ref{fig:glockwaveform}b), Timothy de Reuse, Emily Hopkins, and all the others. In the Music Technology department, Professor Philippe Depalle helped me hone my signal processing knowledge, and Professor Gary Scavone's emphasis on creativity allowed me to do my best work. I would like to thank my family and close friends for their unconditional support and encouragement.\\\ \\
+I would like to thank my supervisor, Professor Ichiro Fijunaga, for providing guidance throughout my master's degree and thesis. His rigor and attention to detail have made me a better researcher. I would like to thank my labmates at the Distributed Digital Music Archives \& Libraries Lab (DDMAL) who helped me work through many difficult parts; N{\'e}stor N{\'a}poles L{\'o}pez, Timothy de Reuse, Emily Hopkins, and all the others. In the Music Technology department, Professor Philippe Depalle helped me hone my signal processing knowledge, and Professor Gary Scavone's emphasis on creativity allowed me to do my best work. I would like to thank my family and close friends for their unconditional support and encouragement.\\
 
-Finally, I appreciate the SigSep organization\footnote{\url{https://github.com/sigsep}} on GitHub, which contains key open-source code projects for music source separation research. Their emphasis on providing high-quality code to accompany academic papers have fostered an environment that's welcoming to beginners like myself, and I'm happy that I was able to work on this thesis during their Music Demixing 2021 challenge \parencite{mdx21}.\footnote{\url{https://mdx-workshop.github.io/}}
+Finally, I am grateful for the SigSep organization\footnote{\url{https://github.com/sigsep}} on GitHub, which hosts key open-source code projects for music source separation research. Their emphasis on providing high-quality code to accompany academic papers have fostered an environment that's welcoming to beginners like myself, and I'm happy that I was able to work on this thesis during their Music Demixing 2021 challenge.\footnote{\url{https://mdx-workshop.github.io/}}
 \end{abstract}
 
 \newpagefill
