Avoid two unnecessary pages

--- a/latex/ch3.tex
+++ b/latex/ch3.tex
@@ -191,7 +191,7 @@ The maximum frequency $f_{\text{max}}$ was fixed to 22,050 Hz, which is the Nyqu
 
 The total frequency bins were chosen from the range of 10--300 bins. The 300-bin maximum was determined by the maximum size of sliCQT that could fit in the 12 GB GPU memory of the NVIDIA 3080 Ti GPU. Details of the hardware limitations of the testbench computer are shown in Appendix \ref{appendix:computerspec}.
 
-The maximum slice length was capped to 44,100 samples, which represents one second of music. This value was chosen because full-length songs are typically split into one second subsequences by several demixing papers \parencite{plumbley1, plumbley2, demucs}. Since the slice length and transition length are automatically picked for a given frequency scale using the new feature whose addition was described in Section \ref{sec:improvelib}, the parameter search discards any combination of parameters that had a slice length larger than the maximum of 44,100 samples.
+The maximum slice length was capped to 44,100 samples, which represents one second of music. This value was chosen because full-length songs are typically split into one second subsequences by several demixing papers \parencite{plumbley1, plumbley2, demucs}. Since the slice length and transition length are automatically picked for a given frequency scale using the new feature whose addition was described in Section \ref{sec:improvelib}, the parameter search discards combination of parameters whose slice length exceeds the maximum.
 
 The random search parameters are shown in Table \ref{table:slicqparams}. Note that an instance of the script was run for each of the four frequency scales: Constant-Q, Variable-Q, mel, and Bark.
 
@@ -223,7 +223,7 @@ The space of possible parameters is infinite, even with the ranges constrained a
 
 I decided to use a random search with at least 64 iterations for the sliCQT parameters, since the sliCQT parameters are hyperparameters of the xumx-sliCQ neural network. I ran two instances of the random parameter search script with 60 iterations each, resulting in 120 total iterations of the random parameter search for each of the four frequency scales. Each instance of the script used a different random seed (42 and 1337). The purpose of fixing the seed of Python's random number generator (RNG) is discussed in Section \ref{sec:pythonbasics}.
 
-Recall from Section \ref{sec:evalbss} that the Signal-to-Distortion (SDR) is one of the scores of the BSS metrics, with a units of decibels (dB), which is commonly used as a single metric that summarizes the global performance of a music demixing system. The selected sliCQT frequency scale parameters were evaluated by computing the mix-phase waveforms, which were described in Section \ref{sec:noisyphaseoracle}. The phase of the complex sliCQT of the mixed song and the magnitude of the complex sliCQT of the ground-truth source signal for all four sources (drums, bass, vocals, other) were combined to create the MPI (mix-phase inversion) waveforms. The median SDR was computed across the four sources and 14 validation tracks of the MUSDB18-HQ dataset, and the sliCQT parameters that resulted in the MPI waveforms with the highest SDR were selected as the final sliCQT parameters to use in the neural network.
+Recall from Section \ref{sec:evalbss} that the Signal-to-Distortion (SDR) is one of the scores of the BSS metrics, with a unit of decibels (dB), which is commonly used as a single metric that summarizes the global performance of a music demixing system. The selected sliCQT frequency scale parameters were evaluated by computing the mix-phase waveforms, which were described in Section \ref{sec:noisyphaseoracle}. The phase of the complex sliCQT of the mixed song and the magnitude of the complex sliCQT of the ground-truth source signal for all four sources (drums, bass, vocals, other) were combined to create the MPI (mix-phase inversion) waveforms. The median SDR was computed across the four sources and 14 validation tracks of the MUSDB18-HQ dataset, and the sliCQT parameters that resulted in the MPI waveforms with the highest SDR were selected as the final sliCQT parameters to use in the neural network.
 
 \subsubsection{Speeding up the parameter search using the GPU and CuPy}
 \label{sec:fasterbsscupy}
