--- a/latex/ch4.tex
+++ b/latex/ch4.tex
@@ -218,9 +218,7 @@ In Section \ref{sec:xumx}, I described how X-UMX (CrossNet-Open-Unmix) is an evo
 
 The evaluated trained model of xumx-sliCQ uses the CDAE architecture. The Bi-LSTM architecture of xumx-sliCQ was not evaluated, due to requiring 36 days to train the full 1,000 epochs. The CDAE architecture was trained fully in four days, which is an acceptable training time for this thesis.
 
-The BSS metrics for the demixing results of UMX, X-UMX, and xumx-sliCQ were computed on the 50-song test set of the MUSDB18-HQ dataset, and the boxplot is shown in Figure \ref{fig:bssboxplot}. Table \ref{table:bsseval} contains the details of the evaluated models, including the median SDR across all 50 tracks of the MUSDB18-HQ test set and all four targets. The results of xumx-sliCQ are computed for both of the Wiener Expectation Maximization (Wiener-EM) post-processing strategies, using the sliCQT or STFT. Wiener-EM will be abbreviated to WEM in the tables that follow.
-
-To maximize result reproducibility, all pretrained models and code were downloaded from their public hosted locations shown in Table \ref{table:bsseval} and stored in a separate repository to generate the results.\footnote{\url{https://gitlab.com/sevagh/xumx_slicq_extra/-/tree/main/mss_evaluation}}
+The BSS metrics for the demixing results of UMX, X-UMX, and xumx-sliCQ were computed on the 50-song test set of the MUSDB18-HQ dataset, and the boxplot is shown in Figure \ref{fig:bssboxplot}. Table \ref{table:bsseval} contains the details of the evaluated models, including the median SDR across all 50 tracks of the MUSDB18-HQ test set and all four targets. The results of xumx-sliCQ are computed for both of the Wiener Expectation Maximization (Wiener-EM) post-processing strategies, using the sliCQT or STFT. Wiener-EM will be abbreviated to WEM in the tables that follow. To maximize result reproducibility, all pretrained models and code were downloaded from their public hosted locations shown in Table \ref{table:bsseval} and stored in a separate repository to generate the results.\footnote{\url{https://gitlab.com/sevagh/xumx_slicq_extra/-/tree/main/mss_evaluation}}
 
 \begin{table}[ht]
 	\centering
@@ -257,7 +255,7 @@ One potential source of poor performance in xumx-sliCQ is the design choice of u
 
 Another potential source of errors in xumx-sliCQ is the de-overlap layer, shown in Figure \ref{fig:cdaeslicqt} and described in Section \ref{sec:deoverlap}. In Section \ref{sec:theoryslicqt}, I showed that the sliCQT has a symmetric zero-padding step to reduce time-domain aliasing. The sliCQT must be overlap-added to create a spectrogram, a procedure shown in Section \ref{sec:stftslicqtcomp1} that has has no inverse. In xumx-sliCQ, I implemented a learned inverse overlap by adding a transpose convolution layer added after the music demixing layers. By contrast, UMX and X-UMX do not need any extra layers, since the STFT can be used as a spectrogram directly.
 
-Finally, the CDAE hyperparameters in xumx-sliCQ, shown in Tables \ref{table:convtable1}--\ref{table:convtable4} in Section \ref{sec:slicqarches}, were perhaps kept too similar to the original STFT-based values (\cite[3]{plumbley1}) (\cite[3]{plumbley2}). The STFT and sliCQT, as has been shown throughout this thesis, are significantly different time-frequency transforms, and neural network architectures or hyperparameters for the STFT and sliCQT are not necessarily interchangeable. A more sophisticated approach should take into account the frequency bins of the nonlinear frequency scale and nonuniform time-frequency resolution of the sliCQT to choose optimal architectures and hyperparameters independently for each CDAE.
+Finally, the CDAE hyperparameters in xumx-sliCQ, shown in Tables \ref{table:convtable1}--\ref{table:convtable4} in Section \ref{sec:slicqarches}, were perhaps kept too similar to the original STFT-based values (\cite[3]{plumbley1}) (\cite[3]{plumbley2}). The STFT and sliCQT, as has been shown throughout this thesis, are significantly different time-frequency transforms, and neural network architectures or hyperparameters for the STFT and sliCQT are not necessarily interchangeable. A more sophisticated approach should take into account the frequency bins of the nonlinear frequency scale and nonuniform time-frequency resolution of the sliCQT to optimize each CDAE independently.
 
 \newpagefill
 
